consume api register login forgot password and otp
